src/style.css
.general{
    margin-top: 20px;
}

#main-image{
    height: 28vh;
    width: 28vh;
}

.secondary-image{
    width: 12vh;
    height: 12vh;
}

#boton-siguiente{
    float: right;
}

#secondary-images{
    cursor: pointer;    
}

.hidden{
    display: none;
}

#button-next{
    margin-left: 15px;
}

#features-list{
    height: 28vh;

}

#features-list li{
    font-size: 1.35vh;
    width: 90%;
}

#bar{
    margin-top: 3.1rem;
}

